--- a/Code/Lib/CMakeLists.txt
+++ b/Code/Lib/CMakeLists.txt
@@ -18,7 +18,7 @@ set(PHAS0100ASSIGNMENT2_LIBRARY_SRCS
   sfmBasicTypes.cpp
   sfmMyFunctions.cpp
   sfmException.cpp
-  sfmPedestrian.cpp
+  sfmTargetedPedestrian.cpp
   sfmForces.cpp
 )
 
@@ -28,6 +28,7 @@ endif ()
 
 set(PHAS0100ASSIGNMENT2_LIBRARY_HDRS
   sfmExceptionMacro.h
+  sfmPedestrian.h
 )
 
 add_library(${PHAS0100ASSIGNMENT2_LIBRARY_NAME} ${PHAS0100ASSIGNMENT2_LIBRARY_HDRS} ${PHAS0100ASSIGNMENT2_LIBRARY_SRCS})
